# VISTA

./: .babelrc  .env.default  .gitignore  .pre-commit-config.yaml  .secrets.baseline  .sonarcloud.properties  ACKNOWLEDGEMENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.build  Dockerfile.offline  LICENSE.md  MAINTAINERS.md  Makefile  NOTICE.md  OGL_LICENSE.md  README.md  RELEASE.md  RUNNING_CODE_DEV_TOOLS.md  SECURITY.md  SETUP.md  craco.config.js  env-config.js  env.default  env.sh  package-lock.json  package.json  set-env.sh  tailwind.config.js  tsconfig.json
backend/: .env.docker.example  .env.example  .envrc  .envrc.example  .gitignore  .secrets.baseline  .venv  Dockerfile  entrypoint.sh  pip-audit.ignore  pip-audit.ignore.md  pyproject.toml  pytest.ini  requirements.txt
backend/django_water_api/: Readme.md  api_test.py  manage.py  parse_ttl_data.py  requirements.txt
backend/django_water_api/django_water_api/: asgi.py  settings.py  urls.py  wsgi.py
backend/django_water_api/exposure/: urls.py  views.py
backend/paralog-python-api/: README.md
backend/paralog-python-api/core/api/: admin.py  apps.py  circle_to_polygon.py  load_fixture.py  models.py  rest_views.py  routing.py  types.py  urls.py
backend/paralog-python-api/core/api/migrations/: 0002_alter_sandbagplacement_longitude.py  0006_alter_lowbridge_name.py  0009_alter_sandbagplacement_latitude_and_more.py  0012_initial_narrow_roads.py  0014_alter_trafficdata_coordinates.py
backend/paralog-python-api/core/api/tests/: test_low_bridges.py  test_models.py  test_road_routes.py  test_sandbags.py  test_views.py  test_vulnerable_people.py
backend/paralog-python-api/core/core/: settings.py  views.py
backend/paralog-python-api/core/core/tests/: test_secret_key.py
backend/paralog-python-api/docs/: quickstart.md  release_process.md  updating_requirements.md  using_poetry.md
backend/paralog-python-api/notebooks/: osmnx.ipynb
backend/vista-python-api/: README.md
backend/vista-python-api/core/api/: __init__.py  admin.py  apps.py  models.py  resolvers.py  rest_views.py  routing.py  schema.graphql  schema.py  urls.py  views.py
backend/vista-python-api/core/api/migrations/: 0003_vulnerableperson_trafficdata.py  0005_lowbridge_name.py  0011_narrowroad.py  0015_delete_sandbagplacement_delete_vulnerableperson.py  0016_delete_lowbridge.py  __init__.py
backend/vista-python-api/core/api/models/: asset.py  dependency.py
backend/vista-python-api/core/api/tests/: test_low_bridges.py  test_models.py  test_road_routes.py  test_road_segments.py  test_sandbags.py
backend/vista-python-api/core/api/views/: assets.py
backend/vista-python-api/core/core/: __init__.py  secret_key.py  settings.py  urls.py
backend/vista-python-api/core/core/mydbengine/: base.py
backend/vista-python-api/core/core/tests/: test_mydbengine.py  test_project.py  test_views.py
backend/vista-python-api/data/: README.md
backend/vista-python-api/data/raw/: morton_common_polygon.geojson
backend/vista-python-api/docs/: detect_secrets.md  getting_started.md  quickstart.md  updating_requirements.md  using_poetry.md
backend/vista-python-api/src/: manage.py
backend/vista-python-api/src/api/: __init__.py  admin.py  apps.py  arch_models.py  circle_to_polygon.py  db_setup.sh  load_fixture.py  permissions.py  resolvers.py  rest_views.py  routing.py  schema.py  serializers.py  types.py  update_db.sh  urls.py
backend/vista-python-api/src/api/data/: cqc-asset-specifications.json  dependencies.csv  environmental-stewardship-schema-areas-esa.json  flood_data.json  naptan-asset-specifications.json  national-grid-asset-specifications.json  nhs-asset-specifications.json  os-names-asset-specifications.json  os-ngd-asset-specifications.json  water_bodies_data.json
backend/vista-python-api/src/api/domain/: __init__.py  cognito_user.py
backend/vista-python-api/src/api/filters/: __init__.py  asset_filter.py
backend/vista-python-api/src/api/fixtures/: asset_categories.json  asset_subcategories.json  asset_types.json  constraint_intervention_types.json  data_sources.json  exposure_layer_types.json  resource_intervention_locations.json  resource_intervention_types.json  scenario_assets.json  scenarios.json
backend/vista-python-api/src/api/management/: __init__.py
backend/vista-python-api/src/api/migrations/: 0001_initial.py  0002_alter_sandbagplacement_longitude.py  0003_vulnerableperson_trafficdata.py  0004_lowbridge.py  0005_lowbridge_name.py  0006_alter_lowbridge_name.py  0007_load_initial_data.py  0008_alter_sandbagplacement_name.py  0009_alter_sandbagplacement_latitude_and_more.py  0010_alter_sandbagplacement_name.py  0011_narrowroad.py  0012_initial_narrow_roads.py  0013_metricate_envelope_restrictions.py  0014_alter_trafficdata_coordinates.py  0015_delete_sandbagplacement_delete_vulnerableperson.py  0016_delete_lowbridge.py  0017_enable_postgis.py  0018_create_asset_tables.py  0019_dependency.py  0020_datasources.py  0021_asset_external_id.py  0022_dependendency_fk_external_id.py  0023_exposurelayer.py  0024_assetcategory_related_names.py  0025_exposurelayertype_exposurelayer_type.py  0026_exposurelayer_type.py  0027_focus_areas.py  0028_visibleexposurelayer.py  0029_scenarioasset.py  0030_asset_score_views.py  0031_update_asset_score_exposure_scenario.py  0032_add_scenario_code_and_active_constraint.py  0032_score_filtering.py  0033_score_filtering_part2.py  0034_visible_exposure_layer_data_migration.py  0035_visible_exposure_layer_schema.py  0036_update_asset_score_views_for_focus_area.py  0037_add_scenario_code_and_active_constraint.py  0037_assetscore_assettype_icon_alter_focusarea_is_active.py  0038_add_assettype_icon.py  (+25 more)
backend/vista-python-api/src/api/models/: __init__.py  asset.py  asset_criticality_override.py  asset_score.py  asset_score_filter.py  (+15 more)
backend/vista-python-api/src/core/: .docker_pg_service.conf  .docker_vista_pgpass  .pg_service.conf  .pg_service.conf.example  .vista_pgpass  .vista_pgpass.example  __init__.py  asgi.py  gunicorn.py  secret_key.py  settings.py  urls.py  views.py  wsgi.py
(+1535 files in other folders)
