###########
# 📜 Poetry
###########
[tool.poetry]
name = "vista_python_api"
version = "2.0.1"
description = "Provides Data to the vista app."
authors = ["NDTP <digitaltwins@dft.gov.uk>"]
license = "UNLICENSED"
classifiers = ["Private :: Do Not Upload"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12.5,<3.13"

# Everything below here is alphabetically sorted
ariadne = "^0.26.2"
ariadne-django = "^0.3.0"
django = "5.2.9"
osmnx = "^1.9.4"
uvicorn = "^0.37.0"
matplotlib = "^3.10.7"
ipykernel = "^6.30.1"
scipy = "^1.16.2"
folium = "^0.20.0"
scikit-learn = "^1.7.2"
loguru = "^0.7.3"
mapclassify = "^2.10.0"
geopy = "^2.4.1"
gunicorn = "^23.0.0"
fiona = ">=1.10.1"
django-environ = "^0.12.0"
cryptography = "44.0.1"
boto3 = "^1.40.50"
psycopg2-binary = "^2.9.11"
jinja2 = "3.1.6"
starlette = "0.49.1"
tornado = "6.5.2"
virtualenv = "20.35.3"
djangorestframework = "^3.16.1"
requests = "^2.32.5"
h11 = "0.16.0"
sqlalchemy = "^2.0.43"
httpx = "^0.28.1"
djangorestframework-gis = "^1.2.0"

[tool.poetry.dev-dependencies]
# Everything below here is alphabetically sorted
detect-secrets = "1.5.0"
ipdb = "^0.13.13"
pip-audit = "^2.9.0"
pre-commit = "^3.8.0"
pytest = "^8.4.2"
pytest-cov = "^7.0.0"
towncrier = "^24.8.0"
pytest-django = "^4.11.1"
model-bakery = "^1.20.5"
cattrs = "^24.1.3"

[tool.poetry.group.dev.dependencies]
ruff = "0.14.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

############
# ✅ Linters
############
[tool.ruff]
line-length = 100
indent-width = 4
target-version = "py312"
extend-include = ["*.ipynb"]
exclude = [
  "bin",
  "manage.py"
]

[tool.ruff.lint]
select = [
  "A",
  "AIR",
  "ARG",
  "B",
  "C4",
  "C90",
  # "COM",  # Specifically COM812 overlaps with ISC001
  # "CPY",
  "D",
  "DJ",
  "DTZ",
  "E",
  # "E4", "E7", "E9",
  "ERA",
  "EXE",
  "F",
  "FA",
  "FIX",
  "FLY",
  # "FURB",
  "G",
  "I",
  "ICN",
  "INP",
  "INT",
  # "ISC",
  # "LOG",
  "N",
  "NPY",
  "PD",
  "PERF",
  "PGH",
  "PIE",
  "PL",
  "PT",
  "PTH",
  "PYI",
  "Q",
  "RET",
  "RSE",
  "RUF",
  "SIM",
  "SLF",
  "SLOT",
  "T10",
  "T20",
  "TCH",
  "TD",
  "TID",
  # "TRY", # https://github.com/astral-sh/ruff/issues/2246#issuecomment-1458328722
  "UP",
  "W",
]
ignore = ["ISC001", "COM812"]
fixable = ["ALL"]

[tool.ruff.lint.pydocstyle]
convention = "pep257"

[tool.ruff.lint.isort]
known-first-party = ["core"]
combine-as-imports = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint.per-file-ignores]
"osmnx.py" = ["N803"]             # Let me call my graph big G.
"resolvers.py" = ["N803", "N806"]
"routing.py" = ["N803", "N806"]
"**/tests/**/*.py" = ["F401", "D102", "PLR2004"]

##############
# 📣 Towncrier
##############
[tool.towncrier]
package = "vista_python_api"
package_dir = "."
filename = "CHANGELOG.md"
directory = ".changelog/"
template = ".changelog/template.md"
title_format = "## [{version}] - {project_date}"
issue_format = "[#{issue}](https://github.com/national-digital-twin/vista/issues/{issue})"
start_string = "<!-- TOWNCRIER -->\n"
underlines = ["", ""]

# .added for new features
# .changed for changes in existing functionality
# .deprecated for soon-to-be removed features
# .removed for now removed features
# .fixed for any bug fixes
# .security in case of vulnerabilities
# .analysis for data analyses
# .docs for documentation improvements
# .maintenance for maintenance tasks & upgrades
[[tool.towncrier.type]]
directory = "added"
name = "Added"
showcontent = true

[[tool.towncrier.type]]
directory = "changed"
name = "Changed"
showcontent = true

[[tool.towncrier.type]]
directory = "deprecated"
name = "Deprecated"
showcontent = true

[[tool.towncrier.type]]
directory = "removed"
name = "Removed"
showcontent = true

[[tool.towncrier.type]]
directory = "fixed"
name = "Bug Fixes"
showcontent = true

[[tool.towncrier.type]]
directory = "security"
name = "Security"
showcontent = true

[[tool.towncrier.type]]
directory = "analysis"
name = "Analyses"
showcontent = true

[[tool.towncrier.type]]
directory = "docs"
name = "Improved Documentation"
showcontent = true

[[tool.towncrier.type]]
directory = "maintenance"
name = "Maintenance Changes"
showcontent = true

[tool.pytest.ini_options]
pythonpath = "vista-python-api/src"
addopts = [
  "--strict-config",
  "--strict-markers",
  "--cov-report=term-missing:skip-covered",
  "--cov-config=pyproject.toml",
  "--cov=core",
  "--cov=api",
]
DJANGO_SETTINGS_MODULE = "core.settings"
xfail_strict = true
filterwarnings = [
  "error",
  '''ignore:'typing\.ByteString' is deprecated and slated for removal in Python 3.14:DeprecationWarning''',
]

[tool.coverage.run]
branch = true
source_pkgs = ["core", "api"]
[tool.coverage.report]
exclude_also = ["if TYPE_CHECKING:"]
