###########
# 📜 Poetry
###########
[tool.poetry]
name = "vista_python_api"
version = "2.0.1"
description = "Provides Data to the vista app."
authors = ["NDTP <digitaltwins@dft.gov.uk>"]
license = "UNLICENSED"
classifiers = ["Private :: Do Not Upload"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12.5,<3.13"

# Everything below here is alphabetically sorted
ariadne = "^0.28.0"
ariadne-django = "^0.3.0"
django = "5.2.12"
osmnx = "^2.0.7"
uvicorn = "^0.40.0"
gunicorn = "^23.0.0"
django-environ = "^0.12.0"
boto3 = "^1.42.44"
psycopg2-binary = "^2.9.11"
starlette = "0.52.1"
virtualenv = "20.36.1"
djangorestframework = "^3.16.1"
requests = "^2.32.5"
sqlalchemy = "^2.0.46"
httpx = "^0.28.1"
djangorestframework-gis = "^1.2.0"

[tool.poetry.dev-dependencies]
# Everything below here is alphabetically sorted
detect-secrets = "1.5.0"
pip-audit = "^2.9.0"
pre-commit = "^4.5.1"
pytest = "^8.4.2"
pytest-cov = "^7.0.0"
towncrier = "^24.8.0"
pytest-django = "^4.11.1"
model-bakery = "^1.23.2"
cattrs = "^26.1.0"

[tool.poetry.group.dev.dependencies]
ruff = "0.15.0"
pytest-asyncio = "^1.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

############
# ✅ Linters
############
[tool.ruff]
line-length = 100
indent-width = 4
target-version = "py312"
extend-include = ["*.ipynb"]
exclude = [
  "bin",
  "manage.py"
]

[tool.ruff.lint]
select = [
  "A",
  "AIR",
  "ARG",
  "B",
  "C4",
  "C90",
  # "COM",  # Specifically COM812 overlaps with ISC001
  # "CPY",
  "D",
  "DJ",
  "DTZ",
  "E",
  # "E4", "E7", "E9",
  "ERA",
  "EXE",
  "F",
  "FA",
  "FIX",
  "FLY",
  # "FURB",
  "G",
  "I",
  "ICN",
  "INP",
  "INT",
  # "ISC",
  # "LOG",
  "N",
  "NPY",
  "PD",
  "PERF",
  "PGH",
  "PIE",
  "PL",
  "PT",
  "PTH",
  "PYI",
  "Q",
  "RET",
  "RSE",
  "RUF",
  "SIM",
  "SLF",
  "SLOT",
  "T10",
  "T20",
  "TCH",
  "TD",
  "TID",
  # "TRY", # https://github.com/astral-sh/ruff/issues/2246#issuecomment-1458328722
  "UP",
  "W",
]
ignore = ["ISC001", "COM812"]
fixable = ["ALL"]

[tool.ruff.lint.pydocstyle]
convention = "pep257"

[tool.ruff.lint.isort]
known-first-party = ["core"]
combine-as-imports = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint.per-file-ignores]
"osmnx.py" = ["N803"]             # Let me call my graph big G.
"resolvers.py" = ["N803", "N806"]
"routing.py" = ["N803", "N806"]
"**/routing/*.py" = ["N803", "N806"]
"**/tests/**/*.py" = ["F401", "D102", "PLR2004"]

##############
# 📣 Towncrier
##############
[tool.towncrier]
package = "vista_python_api"
package_dir = "."
filename = "CHANGELOG.md"
directory = ".changelog/"
template = ".changelog/template.md"
title_format = "## [{version}] - {project_date}"
issue_format = "[#{issue}](https://github.com/national-digital-twin/vista/issues/{issue})"
start_string = "<!-- TOWNCRIER -->\n"
underlines = ["", ""]

# .added for new features
# .changed for changes in existing functionality
# .deprecated for soon-to-be removed features
# .removed for now removed features
# .fixed for any bug fixes
# .security in case of vulnerabilities
# .analysis for data analyses
# .docs for documentation improvements
# .maintenance for maintenance tasks & upgrades
[[tool.towncrier.type]]
directory = "added"
name = "Added"
showcontent = true

[[tool.towncrier.type]]
directory = "changed"
name = "Changed"
showcontent = true

[[tool.towncrier.type]]
directory = "deprecated"
name = "Deprecated"
showcontent = true

[[tool.towncrier.type]]
directory = "removed"
name = "Removed"
showcontent = true

[[tool.towncrier.type]]
directory = "fixed"
name = "Bug Fixes"
showcontent = true

[[tool.towncrier.type]]
directory = "security"
name = "Security"
showcontent = true

[[tool.towncrier.type]]
directory = "analysis"
name = "Analyses"
showcontent = true

[[tool.towncrier.type]]
directory = "docs"
name = "Improved Documentation"
showcontent = true

[[tool.towncrier.type]]
directory = "maintenance"
name = "Maintenance Changes"
showcontent = true

[tool.pytest.ini_options]
pythonpath = "vista-python-api/src"
addopts = [
  "--strict-config",
  "--strict-markers",
  "--cov-report=term-missing:skip-covered",
  "--cov-config=pyproject.toml",
  "--cov=core",
  "--cov=api",
]
DJANGO_SETTINGS_MODULE = "core.settings"
xfail_strict = true
filterwarnings = [
  "error",
  '''ignore:'typing\.ByteString' is deprecated and slated for removal in Python 3.14:DeprecationWarning''',
]

[tool.coverage.run]
branch = true
source_pkgs = ["core", "api"]
[tool.coverage.report]
exclude_also = ["if TYPE_CHECKING:"]
